[gd_scene load_steps=10 format=3 uid="uid://bdres6yqhw74b"]

[ext_resource type="Script" uid="uid://dls7i0kr5onw3" path="res://ui/game_ui.gd" id="1_7r27d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vdb0"]
bg_color = Color(7.412136e-06, 0.67812866, 0.7429936, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ye8ga"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0b514"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55grj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpxnd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e78dt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rn3fg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j65kr"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7r27d")

[node name="GameplayUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameplayUI"]
layout_mode = 1
offset_left = 20.0
offset_right = 370.0
offset_bottom = 115.0

[node name="StrokeLabel" type="Label" parent="GameplayUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Strokes: 0"

[node name="StrokeHeightLabel" type="Label" parent="GameplayUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Stroke Height: Low"

[node name="Label" type="Label" parent="GameplayUI/VBoxContainer"]
layout_mode = 2
text = "W and S change stroke height
Click and hold to shoot
Press P to open menu"

[node name="ResetReminder" type="Control" parent="GameplayUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameplayUI/ResetReminder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Press R To Reset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Popup" type="Label" parent="GameplayUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -463.0
offset_bottom = 67.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "You beat par! WOW!"

[node name="MenuUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level Select" type="Panel" parent="MenuUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6vdb0")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/Level Select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = -130.5
offset_right = 176.5
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MenuUI/Level Select/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "FINAL BUPPO 64"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MenuUI/Level Select/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Level1" type="VBoxContainer" parent="MenuUI/Level Select/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Level1Button" type="Button" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="Level1Score" type="Label" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level1"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: -"

[node name="Level2" type="VBoxContainer" parent="MenuUI/Level Select/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Level2Button" type="Button" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 2
"

[node name="Level2Score" type="Label" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level2"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: -"

[node name="Level3" type="VBoxContainer" parent="MenuUI/Level Select/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Level3Button" type="Button" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 3
"

[node name="Level3Score" type="Label" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level3"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: -"

[node name="Level4" type="VBoxContainer" parent="MenuUI/Level Select/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Level4Button" type="Button" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 4"

[node name="Level4Score" type="Label" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level4"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: -"

[node name="Level5" type="VBoxContainer" parent="MenuUI/Level Select/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Level5Button" type="Button" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level5"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 5
"

[node name="Level5Score" type="Label" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level5"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: -"

[node name="Level6" type="VBoxContainer" parent="MenuUI/Level Select/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Level6Button" type="Button" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level6"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 6
"

[node name="Level6Score" type="Label" parent="MenuUI/Level Select/VBoxContainer/GridContainer/Level6"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: -"

[node name="HSeparator" type="HSeparator" parent="MenuUI/Level Select/VBoxContainer"]
layout_mode = 2

[node name="VolumeControl" type="HBoxContainer" parent="MenuUI/Level Select/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuUI/Level Select/VBoxContainer/VolumeControl"]
layout_mode = 2
size_flags_vertical = 0
text = "Volume
"

[node name="VolumeSlider" type="HSlider" parent="MenuUI/Level Select/VBoxContainer/VolumeControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="Label2" type="Label" parent="MenuUI/Level Select/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Made by Adam Giles and Anson Rutherford
for Ludum Dare 58
"

[node name="TabContainer" type="TabContainer" parent="MenuUI"]
visible = false
layout_mode = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/panel = SubResource("StyleBoxFlat_ye8ga")
theme_override_styles/tabbar_background = SubResource("StyleBoxEmpty_0b514")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_55grj")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_fpxnd")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_e78dt")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_rn3fg")
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_j65kr")
